created post route to grab word inputted by user on main page

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -6,7 +6,7 @@
   <h2>I will write you a haiku...</h2>
   <h2>Tell me, is it good?</h2></b>
 
-<form action="/hello" method="POST">
+<form action="/haiku" method="POST">
     Word: <input type="text" name="word">
     <br/>
     <br/>
