properly displaying in 3 lines

--- a/templates/show.html
+++ b/templates/show.html
@@ -1,7 +1,13 @@
 <!doctype html>
 <title>Here is your haiku</title>
 {% if result %}
-  <h1>{{ result }}</h1>
+  <h1>{{ result[0] }}</h1>
+  <h1>{{ result[1] }}</h1>
+  <h1>{{ result[2] }}</h1>
 {% else %}
   <h1>You didn't enter a word</h1>
 {% endif %}
+
+<!-- god what does not a \nthe sea and the bus is the\n the end we now or
+
+haiku.split('\n') -->
