got minimal css added...still ugly, but stylesheets are now linked

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,4 +1,6 @@
 <!doctype html>
+ {% extends "layout.html" %}
+ {% block body %}
 <title>Haikuna-Matata</title>
   <h1>Welcome to Haikuna-Matata</h1>
 
@@ -15,3 +17,4 @@
 
 </body>
 </html>
+{% endblock %}
