--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,77 +1,67 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #444;
-}
-/*
- * Formatting the header area
- */
 header {
-  background-color: #DFB887;
-  height: 35px;
   width: 100%;
-  opacity: .9;
-  margin-bottom: 10px;
+  height: 30%;
+  display:flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: stretch;
+  align-items: center;
+  font-family: 'Pacifico', cursive;
+  font-size: 40px;
+  letter-spacing: 2px;
 }
-header h1.logo {
-  margin: 0;
-  font-size: 1.7em;
-  color: #fff;
-  text-transform: uppercase;
-  float: left;
+
+body {
+  background: url("https://c1.staticflickr.com/6/5168/5339976848_704053fc92_b.jpg") no-repeat;
+  width: 100%;
+  height: 60%;
+  flex-grow: 3;
+  flex-shrink: 0;
+  flex-basis: 200px;
+  font-family: 'Merriweather', serif;
+  color: white;
+  font-size: 20px;
 }
-header h1.logo:hover {
-  color: #fff;
-  text-decoration: none;
+
+footer {
+  width: 100%;
+  height: 10%;
+  display:flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
-/*
- * Centering the body content
- */
-.container {
-  width: 1200px;
-  margin: 0 auto;
+
+div.container {
+  display:flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: stretch;
+  align-items: center;
 }
-div.home {
-  padding: 10px 0 30px 0;
-  background-color: #E6E6FA;
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
+
+h1.logo {
+  width: 100%;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 75px;
+  text-align: center;
+  color: #4414CC;
 }
-div.about {
-  padding: 10px 0 30px 0;
-  background-color: #E6E6FA;
-  -webkit-border-radius: 6px;
-     -moz-border-radius: 6px;
-          border-radius: 6px;
+
+footer.footer-item {
+  width: 100%;
+  height: 60px;
+  text-align: center;
+  font-family: 'Merriweather', serif;
+  color: #4414CC;
+  font-size: 10px;
 }
+
 h2 {
-  font-size: 3em;
-  margin-top: 40px;
-  text-align: center;
-  letter-spacing: -2px;
-  font-color: black;
-}
-h3 {
-  font-size: 1.7em;
-  font-weight: 100;
-  margin-top: 30px;
-  text-align: center;
-  letter-spacing: -1px;
-  color: #999;
-}
-.menu {
-  float: right;
-  margin-top: 8px;
-}
-.menu li {
-  display: inline;
-}
-.menu li + li {
-  margin-left: 35px;
-}
-.menu li a {
-  color: #444;
-  text-decoration: none;
+    text-shadow: 1px 1px 2px #3D9945;
 }
