--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 	{% block body %}
 	<div class='haiku'>
-		<b><h2>Please enter a word.</h2>
-		<h2>I will write you a haiku...</h2>
-		<h2>Tell me, is it good?</h2></b>
+		<b><h2>deep in the jungle</h2>
+		<h2>problem-free, philosophy</h2>
+		<h2>we have no worries...</h2></b>
 	</div>
 	
 	<form action="/haiku" method="POST">
