set up initial prevent default

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,9 +5,9 @@
 		<h2>problem-free, philosophy</h2>
 		<h2>we have no worries...</h2></b>
 	</div>
-	
-	<form action="/haiku" method="POST">
-		Word: <input type="text" name="word">
+
+	<form id="newHaikuForm" action="/haiku" method="POST">
+		Submit a Word: <input type="text" name="word">
 		<br/>
 		<br/>
 		<input type="submit">
