--- a/templates/show.html
+++ b/templates/show.html
@@ -7,7 +7,7 @@
   <h1>{{ result[1] }}</h1>
   <h1>{{ result[2] }}</h1>
 
-  <h2> Please comment on the effectiveness of this haiku: </h2>
+  <h2> Please comment on the coherence of this haiku: </h2>
   <form action="/train" method="POST">
     <input type="hidden" name="line1" value="{result[0]}" ></input>
     <input type="hidden" name="line2" value="{result[1]}" ></input>
