--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,8 @@
   <title>Haikuna-Matata</title>
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Pacifico" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="/static/javascript/app.js"></script>
 
 </head>
 
