ajaxed return of haiku when user submits word

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,10 @@
   <div class="container">
     {% block body %}
     {% endblock %}
+    <div id="form">
+      {% block content %}
+      {% endblock %}
+    </div>
   </div>
   <footer>
     <ul class='footer-container'>
