--- a/templates/show.html
+++ b/templates/show.html
@@ -1,7 +1,5 @@
-<!doctype html>
-{% extends "layout.html" %}
- {% block body %}
-<title>Here is your haiku</title>
+<div id="resultHaiku">
+  <title>Here is your haiku</title>
 {% if result %}
   <h1>{{ result[0] }}</h1>
   <h1>{{ result[1] }}</h1>
@@ -20,10 +18,9 @@
     <input type="radio" name="update" value="dislike3">I disliked Line 3</input></br>
     <input type="submit"></input>
   </form>
-{% else %}
-  <h1>You didn't enter a word</h1>
 {% endif %}
-{% endblock %}
+</div>
+
 <!-- god what does not a \nthe sea and the bus is the\n the end we now or
 
 haiku.split('\n') -->
