--- a/templates/rating.html
+++ b/templates/rating.html
@@ -1,3 +1,4 @@
+  <h2> Please comment on the effectiveness of this haiku: </h2>
   <form action="/train" method="POST" class="update-form">
     <input type="hidden" name="line1" value="{result[0]}" ></input>
     <input type="hidden" name="line2" value="{result[1]}" ></input>
