--- a/templates/hello.html
+++ b/templates/hello.html
@@ -7,7 +7,7 @@
 	</div>
 
 <div class="form">{%include "word_form.html"%}</div>
-{% include "rating.html" %}
+<div class="rating">{% include "rating.html" %}</div>
 {% endblock %}
 
 
