--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,10 +24,14 @@
     </div>
   </div>
   <footer>
-    <ul class='footer-container'>
-      <li class='footer-item'>Credits</li>
-      <li class='footer-item'>About</li>
-    </ul>
+    <div class='footer-container'>
+      <div class='footer-items'><a href="https://github.com/hollabaq86/haikuna-matata">About</a> | <a href="https://haikuna-matata.herokuapp.com/">Home</a> </div>
+      <div class="credits">
+        <h4>
+          Credit to Flickr user K-ryu for the <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/">photo</a>
+        </h4>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
