--- a/templates/word_form.html
+++ b/templates/word_form.html
@@ -2,6 +2,6 @@
   Submit a Word: <input type="text" name="word">
   <br/>
   <br/>
-  <input type="submit">
+  <input type="submit" class="button">
 </form>
 
