--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
-  <!-- <script src="{{ url_for('static', filename='javascript/app.js')}}"></script> -->
+  <script src="{{ url_for('static', filename='javascript/app.js')}}"></script>
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Pacifico" rel="stylesheet">
 
 </head>
