--- a/templates/rating.html
+++ b/templates/rating.html
@@ -1,19 +1,19 @@
-  <h2> Please comment on the effectiveness of this haiku: </h2>
+  <h3> Does this haiku make sense? </h3>
   <form action="/train" method="POST" class="update-form">
     <input type="hidden" name="line1" value="{result[0]}" ></input>
     <input type="hidden" name="line2" value="{result[1]}" ></input>
     <input type="hidden" name="line3" value="{result[2]}"></input>
-    <label for="update1">How'd you like line one?</label>
-    <input type="radio" class="update1" name="update1" value="like1">I liked it!</input>
-    <input type="radio" class="update1" name="update1" value="dislike1">I disliked it!</input>
-    <input type="radio" class="update1" name="update1" value="indifferent1">Meh, I was indifferent.</input><br><br>
-    <label for="update2">How'd you like line two?</label>
-    <input type="radio" class="update2" name="update2" value="like2">I liked it!</input>
-    <input type="radio" class="update2" name="update2" value="dislike2">I disliked it!</input>
-    <input type="radio" class="update2" name="update2" value="indifferent2">Meh, I was indifferent.</input><br><br>
-    <label for="update3">How'd you like line 3?</label>
-    <input type="radio" class="update3" name="update3" value="like3">I liked it!</input>
-    <input type="radio" class="update3" name="update3" value="dislike3">I disliked it!</input>
-    <input type="radio" class="update3" name="update3" value="indifferent3">Meh, I was indifferent.</input>
-    <input type="submit"></input>
+    <label for="update1">Top line</label>
+    <input type="radio" class="update1" name="update1" value="like1">Makes sense</input>
+    <input type="radio" class="update1" name="update1" value="dislike1">Does not make sense</input>
+    <input type="radio" class="update1" name="update1" value="indifferent1">Meh, I'm indifferent.</input><br><br>
+    <label for="update2">Middle line</label>
+    <input type="radio" class="update2" name="update2" value="like2">Makes sense</input>
+    <input type="radio" class="update2" name="update2" value="dislike2">Does not make sense</input>
+    <input type="radio" class="update2" name="update2" value="indifferent2">Meh, I'm indifferent.</input><br><br>
+    <label for="update3">Bottom line</label>
+    <input type="radio" class="update3" name="update3" value="like3">Makes sense</input>
+    <input type="radio" class="update3" name="update3" value="dislike3">Does not make sense</input>
+    <input type="radio" class="update3" name="update3" value="indifferent3">Meh, I'm indifferent.</input>
+    <input type="submit" class="button"></input>
   </form>
