final touches, opacity, font size, etc

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,9 @@
 
 </head>
 <body>
+  <div class="background-container">
+    <img src="https://c1.staticflickr.com/6/5168/5339976848_704053fc92_b.jpg">
+  </div>
   <header>
     <div class="logo-container">
       <h1 class="logo">Haikuna-Matata</h1>
