--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 header {
   width: 100%;
-  height: 30%;
+  height: 25%;
   display:flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -8,27 +8,38 @@ header {
   align-content: stretch;
   align-items: center;
   font-family: 'Pacifico', cursive;
-  font-size: 40px;
+  font-size: 50px;
   letter-spacing: 2px;
 }
+}
 
-html {
-  background: url("https://c1.staticflickr.com/6/5168/5339976848_704053fc92_b.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+.background-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.background-container img {
+    content : "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity : 0.65;
+    z-index: -1;
+
 }
 
 body {
   width: 100%;
-  height: 60%;
+  height: 65%;
   flex-grow: 3;
   flex-shrink: 0;
   flex-basis: 200px;
   font-family: 'Merriweather', serif;
-  color: white;
-  font-size: 20px;
+  color: black;
+  font-size: 30px;
 }
 
 
@@ -47,6 +58,7 @@ footer {
   align-content: center;
   align-items: center;
   text-shadow: 1px 1px 2px #3D9945;
+  font-size: 20px;
 }
 
 div.container {
@@ -73,13 +85,13 @@ footer.footer-items {
   height: 60px;
   text-align: center;
   font-family: 'Merriweather', serif;
-  color: #4414CC;
+  color: #A540FF;
   font-size: 10px;
   position: absolute;
 }
 
 a {
-  color: white;
+  color: #4414CC;
 }
 
 h2 {
@@ -109,7 +121,7 @@ div.haiku {
   display: inline-block;
   font-family: 'Merriweather', serif;
   position: relative;
-  left: 105px;
+  left: 128px;
   padding: 5px 5px;
   font-size: 15px;
   cursor: pointer;
