styling form, need debugging

--- a/templates/rating.html
+++ b/templates/rating.html
@@ -1,4 +1,39 @@
-  <h3> Does this haiku make sense? </h3>
+<!--  <div class="rating-form">
+    <h3> Does this haiku make sense? </h3>
+    <form action="/train" method="POST" class="update-form">
+    <input type="hidden" name="line1" value="{result[0]}" ></input>
+    <input type="hidden" name="line2" value="{result[1]}" ></input>
+    <input type="hidden" name="line3" value="{result[2]}"></input>
+    <table>
+<tr>
+    <th></th>
+    <th>Yes</th>
+    <th>No</th>
+    <th>Indifferent</th>
+</tr>
+<tr>
+    <td><label for="update1">Top line</label></td>
+    <td>&nbsp&nbsp&nbsp<input type="radio" class="update1" name="update1" value="like1"></td>&nbsp
+    <td>&nbsp&nbsp&nbsp<input type="radio" class="update1" name="update1" value="dislike1"></td>&nbsp
+    <td>&nbsp&nbsp&nbsp<input type="radio" class="update1" name="update1" value="indifferent1"></td>&nbsp
+</tr>
+<tr>
+    <td>Middle line</td>
+    <td>&nbsp&nbsp&nbsp<input type="radio" class="update2" name="update2" value="like2"></td>&nbsp
+    <td>&nbsp&nbsp&nbsp<input type="radio" class="update2" name="update2" value="dislike2"></td>&nbsp
+    <td>&nbsp&nbsp&nbsp<input type="radio" class="update2" name="update2" value="indifferent2"></td>&nbsp
+</tr>
+<tr>
+    <td>Bottom line</td>
+    <td>&nbsp&nbsp&nbsp<input type="radio" class="update3" name="update3" value="like3"></td>&nbsp
+    <td>&nbsp&nbsp&nbsp<input type="radio" class="update3" name="update3" value="dislike3"></td>&nbsp
+    <td>&nbsp&nbsp&nbsp<input type="radio" class="update3" name="update3" value="indifferent3"></td>&nbsp
+</tr>
+</table>
+<input type="submit" class="button"></input>
+</form> -->
+<!-- </div> -->
+
   <form action="/train" method="POST" class="update-form">
     <input type="hidden" name="line1" value="{result[0]}" ></input>
     <input type="hidden" name="line2" value="{result[1]}" ></input>
