--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,11 +32,10 @@ header {
 }
 
 html {
-  background: url("https://c1.staticflickr.com/6/5168/5339976848_704053fc92_b.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
 }
 
 body {
@@ -54,10 +53,7 @@ body {
 footer {
   width: 100%;
   height: 10%;
-  position: fixed;
   left:0px;
-  bottom:10px;
-  height:30px;
   width:100%;
   display:flex;
   flex-direction: row;
@@ -90,7 +86,6 @@ h1.logo {
 
 footer.footer-items {
   width: 100%;
-  height: 60px;
   text-align: center;
   font-family: 'Merriweather', serif;
   color: #A540FF;
