--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,10 +32,7 @@ header {
 }
 
 html {
-  -webkit-background-size: 100% 100%;
-  -moz-background-size: 100% 100%;
-  -o-background-size: 100% 100%;
-  background-size: 100% 100%;
+  background-image: url('/static/background.png');
 }
 
 body {
