--- a/templates/rating.html
+++ b/templates/rating.html
@@ -1,5 +1,5 @@
 
-<!--  <div class="rating-form">
+ <div class="rating-form">
     <h3> Does this haiku make sense? </h3>
     <form action="/train" method="POST" class="update-form">
     <input type="hidden" name="line1" value="{result[0]}" ></input>
@@ -31,11 +31,13 @@
     <td>&nbsp&nbsp&nbsp<input type="radio" class="update3" name="update3" value="indifferent3"></td>&nbsp
 </tr>
 </table>
+<br>
+<br>
 <input type="submit" class="button"></input>
-</form> -->
-<!-- </div> -->
+</form>
+</div>
 
-  <h3> Does this haiku make sense? </h3>
+<!--   <h3> Does this haiku make sense? </h3>
   <form action="/train" method="POST" class="update-form">
     <input type="hidden" name="line1" value="{result[0]}" ></input>
     <input type="hidden" name="line2" value="{result[1]}" ></input>
@@ -53,4 +55,4 @@
     <input type="radio" class="update3" name="update3" value="dislike3">Does not make sense</input>
     <input type="radio" class="update3" name="update3" value="indifferent3">Meh, I'm indifferent.</input>
     <input type="submit" class="button"></input>
-  </form>
+  </form> -->
