--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,11 @@
+html {
+  background-image: url('/static/background.png');
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+}
+
 header {
   width: 100%;
   height: 25%;
@@ -11,7 +19,7 @@ header {
   font-size: 50px;
   letter-spacing: 2px;
 }
-}
+
 
 .background-container {
   position: relative;
@@ -31,9 +39,6 @@ header {
 
 }
 
-html {
-  background-image: url('/static/background.png');
-}
 
 body {
   width: 100%;
@@ -52,6 +57,7 @@ footer {
   height: 10%;
   left:0px;
   width:100%;
+  margin-top: 25px;
   display:flex;
   flex-direction: row;
   flex-wrap: nowrap;
